2004-04-08	blytkerchan	license application & killing memory bugs
	* libconf.c: apply license
	(libconf_init): handle the possibility that the passed-in filenames are NULL
	copy the defaults
	copy the keys into the hashes (call strdup)
	(libconf_fini_helper): new function
	(libconf_fini): free the values of the hash before deleting the hash
	free the defaults
	(libconf_phase1): strdup the hash keys when putting them in the hash
	(libconf_phase4): ditto
	* libconf.h: apply license
	(libconf_optparam_free): new function
	(libconf_optparams_free): ditto
	* libconf_config.h.in: apply license
	* libconf_opt.c: ditto
	* libconf_optparam.c: ditto
	(libconf_optparam_free): new function
	(libconf_optparams_free): ditto

2004-04-05	blytkerchan
	* tests/test1.c: new file
	* tests/global_conf_test1: ditto
	* tests/Makefile.am: ditto
	* Makefile.am [SUBDIRS]: add subdirs to be compiled
	[libconf_la_LIBADD]: add libreplace, posix and libcontain
	* configure.ac: generate tests/Makefile
	* libconf.h (libconf_optconst): new function
	* libconf_opt.c (libconf_optconst): new function
	(libconf_defaultopts): call libconf_optconst

2004-04-02	blytkerchan
	* libconf.h [libconf_param_type_t]: add PT_NUMERIC_LIST, PT_STRING_LIST and PT_FILENAME_LIST types
	[libconf_optparam_t]: add val.array_val field
	[libconf_t]: add t_pt field
	* libconf.c (libconf_phase1): handle list types
	(libconf_phase5_helper): change prototype to make void* pointers non-const
	* libconf_optparam.c (libconf_optparam_dup): handle list types
	(libconf_optparam_new): ditto

	* libconf_opt.c: new file
	* libconf_optparam.c: ditto
	* libconf_config.h.in: ditto
	* Makefile.am [libconf_la_SOURCES]: add libconf_opt.c and libconf_optparam.c
	* configure.ac: check the host platform and set POSIX_OR_WOE32 accordingly
	generate libconf_config.h
	* libconf.c: move libconf_optparam-related functions to libconf_optparam.c
	move libconf_opt-related functions to libconf_opt.c
	include libconf_config.h